--- a/BarberShop/Views/Barbeiro/Index.cshtml
+++ b/BarberShop/Views/Barbeiro/Index.cshtml
@@ -5,8 +5,9 @@
 
 <div id="barbeiroPage" class="container mt-5">
     <h2 class="text-center">Gerenciar Barbeiros</h2>
-    <button class="btn btn-success mb-3" id="btnAdicionarBarbeiro">Adicionar Barbeiro</button>
-
+    <button class="btn mb-3 btnAdicionarCustom" id="btnAdicionarBarbeiro">
+        Adicionar Barbeiro
+    </button>
     <div class="row">
         @foreach (var barbeiro in Model)
         {
