--- a/BarberShop/Views/Servico/Index.cshtml
+++ b/BarberShop/Views/Servico/Index.cshtml
@@ -5,7 +5,11 @@
 
 <div id="servicoPage" class="container-fluid">
     <h2 class="text-center">Gerenciar Serviços</h2>
-    <button class="btn btn-success mb-3" id="btnAdicionarServico">Adicionar Serviço</button>
+    <button class="btn mb-3"
+            id="btnAdicionarServico"
+            style="background-color: #ff4d4d; color: #fff; border: none;">
+        Adicionar Serviço
+    </button>
 
     <!-- Tabela exibida em telas maiores -->
     <div class="table-responsive d-none d-md-block">
