Ajustes e criação de novos usuarios/barbeiros com email

--- a/BarberShop/Views/Agendamento/Index.cshtml
+++ b/BarberShop/Views/Agendamento/Index.cshtml
@@ -45,7 +45,7 @@
     <div class="d-md-none">
         @foreach (var agendamento in Model)
         {
-            <div class="barbeiro-card mb-3">
+            <div class="servico-card mb-3">
                 <h5 class="card-title">Cliente: @agendamento.Cliente.Nome</h5>
                 <p class="card-text"><strong>Barbeiro:</strong> @agendamento.Barbeiro.Nome</p>
                 <p class="card-text"><strong>Data/Hora:</strong> @agendamento.DataHora.ToString("g")</p>
