--- a/BarberShop/Views/Pagamento/Index.cshtml
+++ b/BarberShop/Views/Pagamento/Index.cshtml
@@ -6,9 +6,8 @@
 <div id="pagamentoPage" class="container-fluid mt-5">
     <h2 class="text-center mb-4">Gerenciar Pagamentos</h2>
 
-    <!-- Botão para abrir o modal de Inserir Pagamento -->
-    <div class="text-end mb-3">
-        <button class="btn btn-success" data-bs-toggle="modal" data-bs-target="#inserirPagamentoModal">
+    <div class="d-flex justify-content-start mb-3">
+        <button class="btn btnAdicionarCustom" data-bs-toggle="modal" data-bs-target="#inserirPagamentoModal">
             Inserir Pagamento
         </button>
     </div>
