Ajustes deletar usuario, e deleter barbeiro

--- a/BarberShop/Views/Barbeiro/Index.cshtml
+++ b/BarberShop/Views/Barbeiro/Index.cshtml
@@ -40,7 +40,7 @@
                         <!-- Botões de ação -->
                         <div class="d-flex justify-content-center mt-3">
                             <button class="btn btn-warning btn-sm me-2 btnEditar" data-id="@barbeiro.BarbeiroId">Editar</button>
-                            <button class="btn btn-danger btn-sm btnExcluir" data-id="@barbeiro.BarbeiroId">Excluir</button>
+                            <button class="btn btn-danger btn-sm btnExcluirBarbeiro" data-id="@barbeiro.BarbeiroId">Excluir</button>
                         </div>
                     </div>
                 </div>
