--- a/BarberShop/Views/Shared/_Layout.cshtml
+++ b/BarberShop/Views/Shared/_Layout.cshtml
@@ -9,6 +9,7 @@
         gtag('js', new Date());
         gtag('config', 'G-377Y66G6FR');
     </script>
+    <link rel="icon" type="image/x-icon" href="~/favicon.ico" />
 
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
