--- a/BarberShop/Views/Shared/_AdminLayout.cshtml
+++ b/BarberShop/Views/Shared/_AdminLayout.cshtml
@@ -30,59 +30,89 @@
             <div class="sidebar-heading text-white text-center py-4 border-bottom">
                 <h4>BarberShop Admin</h4>
             </div>
+            @{
+                string role = User.IsInRole("Admin") ? "Admin" : (User.IsInRole("Barbeiro") ? "Barbeiro" : "Outro");
+            }
+
             <div class="list-group list-group-flush">
-                <a href="@Url.Action("Index", "Admin")" class="list-group-item list-group-item-action bg-dark text-white">
-                    <i class="fas fa-chart-line mr-2"></i> Dashboards
-                </a>
-                <hr class="sidebar-divider">
-                <a href="@Url.Action("Index", "Barbeiro")" class="list-group-item list-group-item-action bg-dark text-white">
-                    <i class="fas fa-user-friends mr-2"></i> Barbeiros
-                </a>
-                <hr class="sidebar-divider">
-                <a href="@Url.Action("Index", "Servico")" class="list-group-item list-group-item-action bg-dark text-white">
-                    <i class="fas fa-cut mr-2"></i> Serviços
-                </a>
-                <hr class="sidebar-divider">
-                <a href="@Url.Action("Index", "Pagamento")" class="list-group-item list-group-item-action bg-dark text-white">
-                    <i class="fas fa-credit-card mr-2"></i> Pagamentos
-                </a>
-                <hr class="sidebar-divider">
-                <a href="@Url.Action("Index", "Agendamento")" class="list-group-item list-group-item-action bg-dark text-white">
-                    <i class="fas fa-calendar-alt mr-2"></i> Agendamentos
-                </a>
-                <hr class="sidebar-divider">
-                <a href="@Url.Action("Index", "Barbearia")" class="list-group-item list-group-item-action bg-dark text-white">
-                    <i class="fas fa-info-circle mr-2"></i> Meus Dados
-                </a>
-                <hr class="sidebar-divider">
-                <!-- Dropdown "Horários" -->
-                <div class="list-group-item bg-dark text-white">
-                    <a href="#submenuHorarios" class="text-white text-decoration-none dropdown-toggle" data-bs-toggle="collapse" aria-expanded="false">
-                        <i class="fas fa-clock mr-2"></i> Horários
-                    </a>
-                    <div class="collapse" id="submenuHorarios">
-                        <a href="@Url.Action("Index", "Feriado")" class="list-group-item list-group-item-action bg-dark text-white ml-3">
-                            <i class="fas fa-calendar-alt mr-2"></i> Feriados
-                        </a>
-                        <hr class="sidebar-divider">
-                        <a href="@Url.Action("Index", "IndisponibilidadeBarbeiro")" class="list-group-item list-group-item-action bg-dark text-white ml-3">
-                            <i class="fas fa-user-clock mr-2"></i> Indisponibilidade
-                        </a>
-
-                        <hr class="sidebar-divider">
-                    </div>
-                </div>
-                <hr class="sidebar-divider">
-                @if (User.IsInRole("Admin"))
+                @switch (role)
                 {
-                    <a href="@Url.Action("Index", "Usuario")" class="list-group-item list-group-item-action bg-dark text-white">
-                        <i class="fas fa-users mr-2"></i> Usuários
-                    </a>
-                    <hr class="sidebar-divider">
+                    case "Admin":
+                        <a href="@Url.Action("Index", "Admin")" class="list-group-item list-group-item-action bg-dark text-white">
+                            <i class="fas fa-chart-line mr-2"></i> Dashboards
+                        </a>
+                        <hr class="sidebar-divider">
+                        <a href="@Url.Action("Index", "Barbeiro")" class="list-group-item list-group-item-action bg-dark text-white">
+                            <i class="fas fa-user-friends mr-2"></i> Barbeiros
+                        </a>
+                        <hr class="sidebar-divider">
+                        <a href="@Url.Action("Index", "Servico")" class="list-group-item list-group-item-action bg-dark text-white">
+                            <i class="fas fa-cut mr-2"></i> Serviços
+                        </a>
+                        <hr class="sidebar-divider">
+                        <a href="@Url.Action("Index", "Pagamento")" class="list-group-item list-group-item-action bg-dark text-white">
+                            <i class="fas fa-credit-card mr-2"></i> Pagamentos
+                        </a>
+                        <hr class="sidebar-divider">
+                        <a href="@Url.Action("Index", "Agendamento")" class="list-group-item list-group-item-action bg-dark text-white">
+                            <i class="fas fa-calendar-alt mr-2"></i> Agendamentos
+                        </a>
+                        <hr class="sidebar-divider">
+                        <a href="@Url.Action("Index", "Barbearia")" class="list-group-item list-group-item-action bg-dark text-white">
+                            <i class="fas fa-info-circle mr-2"></i> Meus Dados
+                        </a>
+                        <hr class="sidebar-divider">
+                        <!-- Dropdown "Horários" -->
+                        <div class="list-group-item bg-dark text-white">
+                            <a href="#submenuHorarios" class="text-white text-decoration-none dropdown-toggle" data-bs-toggle="collapse" aria-expanded="false">
+                                <i class="fas fa-clock mr-2"></i> Horários
+                            </a>
+                            <div class="collapse" id="submenuHorarios">
+                                <a href="@Url.Action("Index", "Feriado")" class="list-group-item list-group-item-action bg-dark text-white ml-3">
+                                    <i class="fas fa-calendar-alt mr-2"></i> Feriados
+                                </a>
+                                <hr class="sidebar-divider">
+                                <a href="@Url.Action("Index", "IndisponibilidadeBarbeiro")" class="list-group-item list-group-item-action bg-dark text-white ml-3">
+                                    <i class="fas fa-user-clock mr-2"></i> Indisponibilidade
+                                </a>
+
+                                <hr class="sidebar-divider">
+                            </div>
+                        </div>
+                        <hr class="sidebar-divider">
+                        <a href="@Url.Action("Index", "Usuario")" class="list-group-item list-group-item-action bg-dark text-white">
+                            <i class="fas fa-users mr-2"></i> Usuários
+                        </a>
+                        <hr class="sidebar-divider">
+                        break;
+
+                    case "Barbeiro":
+                        <a href="@Url.Action("Dashboard", "Barbeiro")" class="list-group-item list-group-item-action bg-dark text-white">
+                            <i class="fas fa-chart-line mr-2"></i> Dashboards
+                        </a>
+                        <hr class="sidebar-divider">
+                        <a href="@Url.Action("MeusAgendamentos", "Barbeiro")" class="list-group-item list-group-item-action bg-dark text-white">
+                            <i class="fas fa-calendar-alt mr-2"></i> Meus Agendamentos
+                        </a>
+                        <hr class="sidebar-divider">
+                        <a href="@Url.Action("MeusServicos", "Barbeiro")" class="list-group-item list-group-item-action bg-dark text-white">
+                            <i class="fas fa-cut mr-2"></i> Meus Serviços
+                        </a>
+                        <hr class="sidebar-divider">
+                        <a href="@Url.Action("MinhasDatas", "Barbeiro")" class="list-group-item list-group-item-action bg-dark text-white">
+                            <i class="fas fa-clock mr-2"></i> Minhas Datas
+                        </a>
+                        <hr class="sidebar-divider">
+                        <a href="@Url.Action("MeusDados", "Barbeiro")" class="list-group-item list-group-item-action bg-dark text-white">
+                            <i class="fas fa-user mr-2"></i> Meus Dados
+                        </a>
+                        <hr class="sidebar-divider">
+                        break;
+
+                    default:
+                        <p class="text-white text-center mt-3">Nenhum menu disponível para o seu papel.</p>
+                        break;
                 }
-                <hr class="sidebar-divider">
-
-
 
                 <!-- Logout -->
                 <a href="#" onclick="event.preventDefault(); document.getElementById('logout-form').submit();" class="list-group-item list-group-item-action bg-dark text-white">
