Adição de filtros nos meus Agendamentos para o barbeiro

--- a/BarberShop/Views/Shared/_AdminLayout.cshtml
+++ b/BarberShop/Views/Shared/_AdminLayout.cshtml
@@ -87,7 +87,7 @@
                         break;
 
                     case "Barbeiro":
-                        <a href="@Url.Action("Dashboard", "Barbeiro")" class="list-group-item list-group-item-action bg-dark text-white">
+                        <a href="@Url.Action("Index", "Admin")" class="list-group-item list-group-item-action bg-dark text-white">
                             <i class="fas fa-chart-line mr-2"></i> Dashboards
                         </a>
                         <hr class="sidebar-divider">
